--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ a {
 body, html {
     width: 100%;
     height: 100vh;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Quicksand', sans-serif;
 }
 
 .card {
