--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,16 @@ body, html {
 }
 
 .card {
+    display: flex;
     background-color: rgb(191, 255, 255);
     border-radius: 10px;
-    height: 75px;
-    width: 75px;
+    height: 100px;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.cards {
+    display: flex;
+    flex-direction: row;
 }
