--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,150 @@
+/* NOTICE- CODE SO THAT IT WILL CHANGE LIGHT MODE DURING DAY AND DARK MODE DURING NIGHT */
+/* AND SO THAT THE USER CAN ADJUST THIS IN SETTINGS */
+
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
 a {
+    color:cyan;
     text-decoration: none;
-    color: black;
+    transition: .5 ease all;
+}
+
+a:hover {
+    color: rgb(0, 174, 255);
+    transition: .5s ease all;   
+    cursor: pointer;
 }
 
 body, html {
     width: 100%;
     height: 100vh;
-    font-family:'Quicksand', sans-serif;
+    margin: 0;
+    padding-top: 0;
+    font-family: 'Quicksand', sans-serif;
+    text-align: center;
+}
+
+button {
+    font-size: 16px;
+    border-radius:8px;
+    background-color: rgb(98, 197, 89);
+    color: white;
+    outline: none;
+    size:30px;
+}
+
+input {
+    font-size: 20px;
+    color: black;
+    border-radius: 8px;
+    height: 25px;
+    width: 160px;
+    text-align: left;
+    border: none;
+    padding-left: 10px;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 36px;
+}
+
+h2 {
+    font-size: 25px;
 }
 
 .card {
     display: flex;
-    background-color: rgb(191, 255, 255);
+    background-color: rgba(191, 255, 255, .5);
     border-radius: 10px;
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 120px;
     justify-content: center;
     align-items: center;
     margin: 20px;
+    transition: .8s ease all;
+}
+
+.card:hover {
+    background-color:rgb(119, 178, 255, .6);
+    color: white;
+    transition: .7s ease all;
 }
 
 .cards {
     display: flex;
-    flex-direction: row;
+    justify-content: space-around;
+}
+
+.content {
+    margin-left: 20px;
+    outline: 1px solid black;
+    display: flex;
+    justify-content: center;
+}
+
+.dot {
+    height: 50px;
+    width: 50px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.header {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 30px;
+    width: 100%;
+    height: 80px;
+}
+
+.mastery {
+    float: right;
+    width: 55%
+}
+
+.practice {
+    float: left;
+    width: 40%;
+    margin: 0;
+    padding: 0;
+}
+
+.square {
+    height: 50px;
+    width: 50px;
+    background-color: #555;
+}
+
+.topics {
+    width: 10%;
+}
+
+.triangle-up {
+    width: 0;
+    height: 0;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    border-bottom: 50px solid #555;
+}
+
+#assessments > ul, h2, #topics > ul, h2 {
+    width: 50%;
+}
+
+#info {
+    font-size: 16px;
+}
+
+#personal-info {
+    text-align: right;
+}
+
+@media screen and (min-width: 600px) {
+    h2 {
+        size: 400px;
+    }
 }
