--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ h6 {
 .header {
     position: absolute;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding-left: 30px;
     width: 100%;
