--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
+* {
+    margin: 0;
+}
+
 a {
     color:cyan;
     text-decoration: none;
@@ -16,10 +20,12 @@ a:hover {
 }
 
 body, html {
-    width: 100%;
     height: 100vh;
     font-family: 'Quicksand', sans-serif;
+    margin: 0;
+    padding: 0;
     text-align: center;
+    width: 100%;
 }
 
 button {
@@ -43,8 +49,8 @@ input {
 }
 
 h1 {
-    font-weight: bold;
     font-size: 36px;
+    font-weight: bold;
 }
 
 h2 {
@@ -68,15 +74,15 @@ h6 {
 }
 
 .card {
-    display: flex;
+    align-items: center;
     background-color: rgba(191, 255, 255, .5);
     border-radius: 10px;
+    display: flex;
     height: 120px;
-    width: 120px;
     justify-content: center;
-    align-items: center;
     margin: 20px;
     transition: .8s ease all;
+    width: 120px;
 }
 
 .card:hover {
@@ -91,10 +97,10 @@ h6 {
 }
 
 .content {
-    margin-left: 20px;
-    outline: 1px solid black;
     display: flex;
     justify-content: center;
+    margin-left: 20px;
+    outline: 1px solid black;
 }
 
 .desktop-only {
@@ -102,21 +108,19 @@ h6 {
 }
 
 .dot {
-    height: 50px;
-    width: 50px;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
+    height: 50px;
+    width: 50px;
 }
 
 .header {
-    position: absolute;
-    display: flex;
-    justify-content: space-around;
     align-items: center;
-    padding-left: 30px;
-    width: 100%;
+    display: flex;
     height: 80px;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .mastery {
@@ -126,15 +130,15 @@ h6 {
 
 .practice {
     float: left;
-    width: 40%;
     margin: 0;
     padding: 0;
+    width: 40%;
 }
 
 .square {
+    background-color: #555;
     height: 50px;
     width: 50px;
-    background-color: #555;
 }
 
 .topics {
@@ -142,11 +146,11 @@ h6 {
 }
 
 .triangle-up {
-    width: 0;
-    height: 0;
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
     border-bottom: 50px solid #555;
+    height: 0;
+    width: 0;
 }
 
 #assessments > ul, h2, #topics > ul, h2 {
@@ -162,8 +166,12 @@ h6 {
 }
 
 @media screen and (min-width: 600px) {
-    * {
+    body, html {
         text-align: left;
+    }
+
+    .desktop-only {
+        display: flex;
     }
 
     .mobile-only {
