--- a/css/light.css
+++ b/css/light.css
@@ -1,8 +1,16 @@
+a {
+    color: black;
+}
+
 body, html {
     background-color: white;
     color: black;
 }
 
-.header {
-    background-color: rgb(88, 218, 218);
+@media screen and (min-width: 600px) {
+
+    .header {
+        background-color: rgb(88, 218, 218);
+    }
+
 }
