--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
     margin: auto;
 }
 
+button, h1, h3, h4, input, p, #challenge {
+    margin: 8px 15px;
+}
+
 a {
     color:cyan;
     text-decoration: none;
@@ -14,28 +18,41 @@ a {
 }
 
 a:hover {
-    color: rgb(0, 174, 255);
-    transition: .5s ease all;   
+    color: rgb(0, 174, 255); 
     cursor: pointer;
+    transition: .5s ease all;  
 }
 
-body, html {
+body, html{
     height: 100vh;
     font-family: 'Quicksand', sans-serif;
     margin: auto;
-    padding: 0;
     text-align: center;
     width: 100%;
 }
 
 button {
-    background-color: rgb(98, 197, 89);
+    background-color: rgb(49, 199, 124);
+    border: none;
     border-radius:8px;
     color: white;
-    cursor: pointer;
     font-size: 16px;
     outline: none;
+    padding: 8px;
     size:30px;
+    transition: .5s ease all;
+}
+
+button:hover {
+    background-color: rgb(129, 231, 175);
+    cursor: pointer;
+    transition: .5s ease all;
+}
+
+iframe {
+    height: 360px;
+    /* outline: none; */
+    width: 30%;
 }
 
 input {
@@ -51,6 +68,7 @@ input {
 
 h1 {
     font-size: 36px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
     font-weight: bold;
 }
 
@@ -98,10 +116,11 @@ h6 {
 }
 
 .content {
+    align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin-left: 20px;
-    outline: 1px solid black;
 }
 
 .desktop-only {
@@ -114,6 +133,17 @@ h6 {
     display: inline-block;
     height: 50px;
     width: 50px;
+}
+
+.logo {
+    border-radius: 95%;
+    transition: .5s ease all;
+}
+
+.logo:hover {
+    background-color: rgb(230, 218, 218);
+    opacity: 50%;
+    transition :.5s ease all;
 }
 
 .mastery {
@@ -150,6 +180,24 @@ h6 {
     width: 50%;
 }
 
+#challenge {
+    background-color: rgba(147, 245, 245, .2);
+    border-radius: 15px;
+    padding: 25px;
+}
+
+#countdown {
+    align-items: center;
+    background-color:antiquewhite;
+    border-radius: 50%;
+    display: none;
+    font-size: 30px;
+    font-weight: bold;
+    height: 50px;
+    justify-content: center;
+    width: 50px;
+}
+
 #info {
     font-size: 16px;
 }
@@ -161,6 +209,7 @@ h6 {
 @media screen and (min-width: 600px) {
     body, html {
         text-align: left;
+        margin: auto;
     }
 
     .desktop-only {
