--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ a {
 }
 
 a:hover {
-    color: rgb(0, 174, 255); 
+    color: white; 
     cursor: pointer;
     transition: .5s ease all;  
 }
@@ -51,6 +51,7 @@ button:hover {
 
 iframe {
     height: 360px;
+    min-width: 350px;
     /* outline: none; */
     width: 30%;
 }
@@ -61,7 +62,6 @@ input {
     border-radius: 8px;
     height: 25px;
     width: 160px;
-    text-align: left;
     border: none;
     padding-left: 10px;
 }
@@ -92,6 +92,11 @@ h6 {
     font-size: 18px;
 }
 
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+
 .card {
     align-items: center;
     background-color: rgba(191, 255, 255, .5);
@@ -112,7 +117,17 @@ h6 {
 
 .cards {
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-weight: 600;
+    justify-content: flex-start;
+}
+
+.close-btn {
+    cursor: pointer;
+    position: absolute;
+    right: 5px;
+    top: 5px;
 }
 
 .content {
@@ -121,6 +136,7 @@ h6 {
     flex-direction: column;
     justify-content: center;
     margin-left: 20px;
+    transform: translateX(-1%);
 }
 
 .desktop-only {
@@ -135,6 +151,19 @@ h6 {
     width: 50px;
 }
 
+.formsci {
+    background-color:rgb(186, 226, 252);
+}
+
+.header {
+    align-items: center;
+    display: flex;
+    height: 80px;
+    justify-content: space-between;
+    width: 100%;
+    box-shadow: 30px;
+}
+
 .logo {
     border-radius: 95%;
     transition: .5s ease all;
@@ -142,7 +171,7 @@ h6 {
 
 .logo:hover {
     background-color: rgb(230, 218, 218);
-    opacity: 50%;
+    opacity: 90%;
     transition :.5s ease all;
 }
 
@@ -151,11 +180,62 @@ h6 {
     width: 55%
 }
 
-.practice {
+/* .practice {
     float: left;
     margin: 0;
     padding: 0;
     width: 40%;
+} */
+
+.row {
+    background-color: rgba(98, 207, 98, .5);
+    border-radius: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    width: 100%
+}
+
+.shoutout {
+    position: relative;
+}
+
+.sidenav {
+    /* width: 0; */
+    /* position: fixed; Stay in place */
+    z-index: 2;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; 
+    /* padding-top: 60px;  */
+    left: 0;
+    position: fixed;
+    height: 100%; 
+    padding-top: 60px;
+    top: 0; 
+    transition: .2s;
+    width: 0; 
+}
+
+.sidenav a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #f7f7f7;
+    display: block;
+    transition: 0.3s;
+  }
+
+.sidenav a:hover {
+    color:aqua;
+    transition: .3s;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
 
 .square {
@@ -180,6 +260,10 @@ h6 {
     width: 50%;
 }
 
+#answer {
+    text-align: center;
+}
+
 #challenge {
     background-color: rgba(147, 245, 245, .2);
     border-radius: 15px;
@@ -198,12 +282,35 @@ h6 {
     width: 50px;
 }
 
+#footer {
+    margin-top: 40px;
+}
+
+#header {
+    margin-bottom: 5px;
+}
+
 #info {
     font-size: 16px;
 }
 
+#menu {
+    cursor: pointer;
+    font-size: 24px;
+    left: 35px;
+    position: absolute;
+    top: 20px;
+    transform: scaleX(1.3);
+    transition: .3s;
+    z-index: 2;
+}
+
 #personal-info {
     text-align: right;
+}
+
+#sidenav {
+    width: 0;
 }
 
 @media screen and (min-width: 600px) {
@@ -216,21 +323,35 @@ h6 {
         display: flex;
     }
 
-    .header {
-        align-items: center;
-        display: flex;
-        height: 80px;
-        justify-content: space-between;
-        width: 100%;
-        box-shadow: 30px;
-    }
-
     .mobile-only {
         display: none;
+    }
+
+    .sidenav {
+        padding-top: 60px;
+    }
+
+    .sidenav a {
+        font-size: 20px;
+        padding-left: 32px;
     }
 
     .top-menu {
         display: flex;
         justify-content: space-around;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+
+    .close-btn {
+        position: absolute;
+        right:5px;
+        font-size: 30px;
+    }
+
+    .shoutout {
+        position:absolute;
+        right:20px;
     }
 }
