--- a/css/light.css
+++ b/css/light.css
@@ -4,8 +4,27 @@ a {
 }
 
 body, html {
-    background-color: white;
+    background-color: rgb(230, 230, 230);
     color: black;
+}
+
+.sidenav {
+    background-color: rgb(88, 218, 218);
+    box-shadow: 0 5px 5px rgb(109, 109, 109);
+}
+
+.sidenav a {
+    color: black;
+}
+
+#menu:hover {
+    color: rgb(255, 255, 255);
+    transition: .3s;
+}
+
+#sidenav > a:hover {
+    color: white;
+    transition: .3s;
 }
 
 @media screen and (min-width: 600px) {
