--- a/css/dark.css
+++ b/css/dark.css
@@ -3,9 +3,21 @@
 }
 
 body, html {
-    background-color: black;
+    background-color: rgb(35,35,35);
+}
+
+table, td, th {
+    background-color: rgb(44, 116, 116);
 }
 
 .header {
     background-color: rgb(42, 62, 128);
+}
+
+#challenge {
+    background-color: rgba(0, 168, 168, 0.6);
+}
+
+#countdown {
+    background-color:rgb(124, 133, 255);
 }
