--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
+.unfinished {display: none;}
+
 * {
     margin: auto;
 }
@@ -78,6 +80,7 @@ h1 {
     font-size: 36px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
     font-weight: bold;
+    margin: 30px 0 30px 40px;
 }
 
 h2 {
@@ -100,11 +103,12 @@ h6 {
     font-size: 18px;
 }
 
-ol {
+ol, ul {
     background-color:rgb(186, 226, 252);
     border-radius: 10px;
-    display: inline-block;
+    display: block;
     margin: 10px;
+    max-width: 50%;
     padding: 10px;
     padding-left: 30px;
 }
@@ -125,6 +129,21 @@ pre > code {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+table, th, td {
+    background-color: azure;
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+td > img {
+    height: 40px
+}
+
+th, td {
+    padding: 2px 7px;
+}
+
 .break {
     flex-basis: 100%;
     height: 0;
@@ -133,6 +152,7 @@ pre > code {
 .card {
     align-items: center;
     background-color: rgba(191, 255, 255, .5);
+    border: 1px solid rgb(109, 109, 109);
     border-radius: 10px;
     display: flex;
     height: 120px;
@@ -150,11 +170,28 @@ pre > code {
 }
 
 .cards {
+    border: 2px solid rgb(150,150,150);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(151, 151, 151, .3);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     font-weight: 600;
     justify-content: flex-start;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
+
+.cards-label {
+    background-color:rgb(122, 255, 188);
+    border: 3px solid rgb(31, 124, 70);
+    border-radius: 5px;
+    display: inline;
+    padding: 5px;
+    text-align:center;
+    /* transform: scale(1.2) rotate(180deg) translateX(25px); */
+    transform: scale(1.3) translateY(20px);
+    /* writing-mode: vertical-lr; */
 }
 
 .close-btn {
@@ -198,6 +235,10 @@ pre > code {
     box-shadow: 30px;
 }
 
+.humanities {
+    background-color: rgb(121, 18, 121,.5);
+}
+
 .logo {
     border-radius: 95%;
     transition: .5s ease all;
@@ -212,6 +253,10 @@ pre > code {
 .mastery {
     float: right;
     width: 55%
+}
+
+.natsci {
+    background-color: rgb(109, 214, 109, .5);
 }
 
 /* .practice {
@@ -272,6 +317,10 @@ pre > code {
     margin-left: 50px;
 }
 
+.socsci {
+    background-color: rgba(216, 184, 0,.5);
+}
+
 .square {
     background-color: #555;
     height: 50px;
@@ -300,7 +349,9 @@ pre > code {
 
 #challenge {
     background-color: rgba(147, 245, 245, .2);
+    border: 3px solid rgb(97, 179, 255,.6);
     border-radius: 15px;
+    box-shadow: 0 5px 10px rgba(151, 151, 151, .3);
     padding: 25px;
 }
 
