--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
-.unfinished {display: none;}
+#u {display: none;}
 
 * {
     margin: auto;
