--- a/css/dark.css
+++ b/css/dark.css
@@ -7,8 +7,9 @@ body, html {
 }
 
 h1 {
-    background-color: rgba(0, 255, 255, 0.849);
-    /* color:rgb(121, 121, 121); */
+    background-color: rgba(75, 189, 189, 0.781);
+    border-color:rgb(202, 202, 202);
+    color:rgb(214, 213, 213);
 }
 
 table, td, th {
