--- a/css/styles.css
+++ b/css/styles.css
@@ -81,18 +81,18 @@ input[type=email] {
 }
 
 h1 {
-    background-color: rgb(230, 17, 81,.5);
+    background-color: rgba(49, 139, 243, 0.397);
     border-bottom: 3px solid rgba(0, 0, 0, 0.329);
     border-top: 3px solid rgba(0, 0, 0, 0.329);
     /* border-radius: 10px; */
     color:rgb(32, 32, 32);
     /* color:rgb(235, 235, 235); */
-    font-size: 40px;
+    font-size: 32px;
     font-family: 'Montserrat', sans-serif;
     /* font-family: 'Ubuntu', sans-serif;  */
     font-weight: 300;
     letter-spacing: .15rem;
-    padding: 10px 0;
+    padding: 7px 0;
     text-align: center;
     transform: translate(0, -2px);
     width: 100%;
@@ -108,6 +108,7 @@ h3 {
 
 h4 {
     font-size: 22px;
+    font-weight:300;
 }
 
 h5 {
@@ -150,7 +151,7 @@ table {
 }
 
 table, th, td {
-    border: 3px solid rgb(223, 223, 223);
+    border: 2px solid rgb(223, 223, 223);
     border-collapse: collapse;
     text-align: center;
 }
@@ -159,19 +160,28 @@ td > img {
     height: 40px
 }
 
-th, td {
+td {
     font-weight: 500;
     padding: 2px 7px;
 }
 
 th {
     background-color: rgba(105, 211, 141, 1);
-    /* font-size: 30px; */
-    font-weight: 700;
+    font-weight: 500;
+    padding: 5px 7px;
 }
 
 ul {
     list-style: none;
+}
+
+.bitVector {
+    width:100px;
+    background-color: blue;
+}
+
+.bitVector>div:hover {
+    cursor: pointer;
 }
 
 .break {
@@ -185,7 +195,9 @@ ul {
     border: 2px solid rgb(151, 151, 151);
     border-radius: 10px;
     display: flex;
+    font-family: 'Ubuntu', sans-serif;
     font-size: 12px;
+    font-weight:400;
     height: 85px;
     justify-content: center;
     margin: 13px;
@@ -214,8 +226,10 @@ ul {
     flex-direction: row;
     flex-wrap: wrap;
     font-weight: 600;
-    justify-content: space-around;
+    justify-content: flex-baseline;
     /* margin-bottom: 15px; */
+    max-width: 91%;
+    padding: 10px;
     padding-top: 20px;
     transition: .5s ease all;
 }
@@ -254,6 +268,12 @@ ul {
     transform: translateX(-1%);
 }
 
+.definition {
+    background-color: aqua;
+    font-size: 25px;
+    padding: 20px;
+}
+
 .desktop-only {
     display: none;
 }
@@ -277,6 +297,10 @@ ul {
     justify-content: space-between;
     width: 100%;
     box-shadow: 30px;
+}
+
+.highlight {
+    background-color: rgb(61, 61, 55);
 }
 
 .humanities {
@@ -426,7 +450,7 @@ ul {
 }
 
 #footer {
-    margin-top: 40px;
+    margin-top: 50px;
 }
 
 #info {
