--- a/css/light.css
+++ b/css/light.css
@@ -8,7 +8,7 @@ a:hover {
     transition: .5s ease all;
 }
 
-body, html {
+body, html, .sidenav {
     background-color: rgb(230, 230, 230);
     /* background-color:blue; */
     color: rgb(49, 49, 49);
@@ -22,13 +22,30 @@ h3:hover {
     background-color: black;
 }
 
+.card {
+    background-color:rgba(255,255,255,.2);
+}
+
+.card:hover {
+    background-color: rgba(240, 248, 255, 0.774);
+    color: black;
+}
+
 .sidenav {
-    background-color: rgb(88, 218, 218);
+    /* background-color: rgb(88, 218, 218); */
     box-shadow: 0 5px 5px rgb(109, 109, 109);
+    transition: .4s;
 }
 
 .sidenav a {
-    color: black;
+    color:black;
+}
+
+.sidenav a:hover {
+    transition: .3s;
+    background-color: rgba(94, 94, 94, 0.651);
+    color: rgb(255, 255, 255);
+    transition: .4s;
 }
 
 .tab {
@@ -37,7 +54,7 @@ h3:hover {
 }
 
 #menu:hover {
-    color: rgb(255, 255, 255);
+    /* color: rgb(255, 255, 255); */
     transition: .3s;
 }
 
@@ -46,10 +63,7 @@ h3:hover {
     border-bottom: 1px solid black; 
 }
 
-#sidenav > a:hover {
-    color: white;
-    transition: .3s;
-}
+
 
 @media screen and (min-width: 600px) {
 
