--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,8 @@ a {
 }
 
 a:hover {
-    color: rgb(112,255,255); 
+    /* color: rgb(112,255,255);  */
+    /* color: rgb(35, 163, 163); */
     cursor: pointer;
     transition: .5s ease all;  
 }
@@ -82,21 +83,18 @@ input[type=email] {
 
 h1 {
     background-color: rgba(49, 139, 243, 0.497);
-    border-bottom: 3px solid rgba(0, 0, 0, 0.329);
-    border-top: 3px solid rgba(0, 0, 0, 0.329);
-    /* border-radius: 10px; */
+    border-bottom: 1px solid rgba(0, 0, 0, 0.329);
+    border-top: 1px solid rgba(0, 0, 0, 0.329);
     color:rgb(32, 32, 32);
-    /* color:rgb(235, 235, 235); */
     font-size: 22px;
     font-family: 'Montserrat', sans-serif;
-    /* font-family: 'Ubuntu', sans-serif;  */
     font-weight: 300;
     letter-spacing: .15rem;
-    margin: 0;
-    padding: 15px 0 15px 0;
+    margin-bottom: 0;
+    padding: 15px 0 15px 26px;
     text-align: center;
-    transform: translate(0, -2px);
-    width: 100%;
+    transform: translate(0, -1px);
+    width: -webkit-calc(100% - 26px);
     z-index: 0;
 }
 
@@ -210,17 +208,17 @@ ul {
 
 .card {
     align-items: center;
-    /* background-color: rgba(191, 255, 255, .5); */
-    background-color:rgba(255, 255, 255, 0.781);
-    border: 2px solid rgb(151, 151, 151);
+    /* background-color:rgba(255, 255, 255, 0.781); */
+    /* background-color: none; */
+    border: 1px solid rgb(151, 151, 151);
     border-radius: 10px;
     display: flex;
     font-family: 'Ubuntu', sans-serif;
     font-size: 12px;
     font-weight:400;
-    height: 35px;
     justify-content: center;
-    margin: 8px;
+    margin: 3px;
+    min-height: fit-content;
     padding: 2px;
     text-align: center;
     transition: .8s ease all;
@@ -228,7 +226,7 @@ ul {
 }
 
 .card:hover {
-    background-color: rgba(104, 103, 103, 0.377);
+    /* background-color: rgba(104, 103, 103, 0.377); */
     border-color: rgba(255, 255, 255, 0.623);
     color: white;
     transform: scale(1.05);
@@ -237,8 +235,11 @@ ul {
 
 .cards {
     display: flex;
+    margin:0;
+    margin-bottom:0;
     flex-flow: row wrap;
     justify-content: center;
+    max-width:100%;
 }
 
 .cards-label {
@@ -267,8 +268,8 @@ ul {
 .col {
     display: flex;
     flex-direction: column;
-    gap: 40px;
-    margin-top: 15px;
+    gap: 20px;
+    margin-top: 0px;
 }
 
 .content {
@@ -280,18 +281,22 @@ ul {
     width: 100%;
 }
 
-.content > div {
+.content div {
     margin-bottom: 30px;
     margin-top: 0;
-    max-width: 87%;
+    /* max-width: 87%; */
     min-width: 200px;
     /* margin: 15px 0; */
 }
 
-.content > h1 {
+.content h1 {
     margin-top: 0;
     margin-bottom: 30px;
     /* transform: translateY(-22px); */
+}
+
+.content .process:first-of-type {
+    margin-top: 5px;
 }
 
 .content-container {
@@ -303,10 +308,12 @@ ul {
     /* background-color: aqua; */
     /* font-size: 25px; */
     /* padding: 20px; */
+    align-items: center;
     display: flex; 
     flex-flow: row wrap;
+    margin-bottom:0;
     gap:10px;
-    width: 80%;
+    width: 95%;
 }
 
 .desktop-only {
@@ -323,6 +330,8 @@ ul {
 
 .definition .example {
     display: none;
+    /* height: fit-content; */
+    margin-top:0;
     max-width: 45%;
     transition: .5s ease all;
 }
@@ -343,7 +352,7 @@ ul {
 
 .formsci {
     /* background-color:rgb(186, 226, 252); */
-    background-color:rgba(80, 185, 255, 0.678);
+    background-color:rgba(110, 221, 255, 0.678);
 }
 
 .has-table {
@@ -355,12 +364,23 @@ ul {
     background-color: rgb(61, 61, 55);
 }
 
+#hscrollable {
+    margin:0;
+    padding:0;
+    /* background-color: #08c708; */
+    max-width:1000px;
+    /* width: 300px; */
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 .humanities {
     background-color: rgba(189, 140, 223, 0.336);
 }
 
 .logo {
     border-radius: 95%;
+    display: none;
     transition: .5s ease all;
 }
 
@@ -395,15 +415,19 @@ ul {
 .process {
     align-items: center;
     /* background-color: rgb(181, 232, 240); */
-    flex-direction: column;
-    border: 2px solid rgb(150,150,150);
+    border: 1.5px solid rgb(150,150,150);
     border-radius: 10px;
     box-shadow: 0 5px 10px rgba(151, 151, 151, .3);
     display: flex;
+    flex-direction: column;
     font-weight: 400;
     justify-content: left;
+    margin-top: 0;
+    margin-bottom:0;
+    padding: 0;
+    padding-bottom:5px;
     /* margin-bottom: 15px; */
-    max-width: 400px;
+    max-width:91%;
     min-width: 200px;
     transition: .5s ease all;
     z-index: 0;
@@ -418,15 +442,26 @@ ul {
 .process-label {
     background-color: rgb(34, 236, 186);
     border-bottom: 1px solid rgb(99, 99, 99);
-    border-start-start-radius: 8px;
-    border-top-right-radius: 8px;
+    border-start-start-radius: 9px;
+    border-top-right-radius: 9px;
     font-weight: 500;
     padding: 10px 0;
+    /* transform:translate(-1px,-1px); */
     text-align: center;
     width: 100%;
+    margin:0;
 }
 
-.process > div {
+.process .cards {
+    padding: 0;
+    margin:0;
+}
+
+.process .process-label {
+    margin:0;
+}
+
+.process p {
     margin:3px;
 }
 
@@ -472,7 +507,7 @@ ul {
     transition: 0.3s;
   }
 
-.sidenav a:hover {
+.sidenav {
     color:aqua;
     transition: .3s;
 }
@@ -524,7 +559,7 @@ ul {
     padding:28px 2px 0 2px;
     position: absolute;
     right:-18px;
-    top:80px;
+    top:0;
     transform:scale(1);
     transform:translate(2px,80px);
     width:15px;
@@ -582,8 +617,8 @@ ul {
     margin-left:0;
     margin-right:0;
     margin-top: 50px;
-    padding:0;
-    width: 100%;
+    padding-left: 0.3%;
+    width: 98%;
 }
 
 #hide {
@@ -593,6 +628,11 @@ ul {
     align-self: flex-start;
     /* transform:translate(25px,-285px); */
     /* position: absolute; */
+    width: 100%;
+}
+
+#hide p a {
+    width:100%;
 }
 
 #hide div {
@@ -614,16 +654,12 @@ ul {
 
 #hide h5 {
     padding: 6px 8px;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
 }
 
 #hide p {
     border-bottom: 1px solid rgb(153, 153, 153);
     padding: 2px 6px 5px 8px;
-}
-
-#hide p:last-of-type {
-    color:red;
 }
 
 #info {
@@ -653,18 +689,16 @@ ul {
 
     h1 {
         font-size: 32px;
-        margin: 0;
+        margin-top: 0;
         padding: 7px 0;
+        width: 100%;
     }
 
     .card {
         height: 85px;
-        margin: 13px;
+        margin: 10px;
         padding: 5px;
-    }
-
-    fdiv {
-        max-width: 91%;
+        min-width: 85px;
     }
 
     .desktop-only {
@@ -680,12 +714,16 @@ ul {
         box-shadow: 30px;
     }
 
+    .logo {
+        display: block;
+    }
+
     .mobile-only {
         display: none;
     }
 
     .sidenav {
-        padding-top: 60px;
+        padding-top: 66px;
     }
 
     .sidenav a {
@@ -731,8 +769,8 @@ ul {
     .content {
         /* background-color: #111; */
         width: 100%;
-        padding:0;
-        margin:0;
+        padding-top:0;
+        margin-top:0;
     }
 
     .content .bottom {
@@ -741,7 +779,8 @@ ul {
 
     .content .definition {
         width: 91%;
-        gap: 10px;
+        margin-bottom:5px;
+        /* gap: 10px; */
     }
 
     .natsci {
