--- a/css/styles.css
+++ b/css/styles.css
@@ -442,13 +442,14 @@ ul {
 .process-label {
     background-color: rgb(34, 236, 186);
     border-bottom: 1px solid rgb(99, 99, 99);
-    border-start-start-radius: 9px;
-    border-top-right-radius: 9px;
+    border-start-start-radius: 8px;
+    border-top-right-radius: 8px;
     font-weight: 500;
-    padding: 10px 0;
+    padding: 10px 0px;
+    width: calc(100%);
     /* transform:translate(-1px,-1px); */
     text-align: center;
-    width: 100%;
+    /* width: 100%; */
     margin:0;
 }
 
@@ -654,6 +655,7 @@ ul {
 
 #hide h5 {
     padding: 6px 8px;
+    margin-top:0;
     /* margin-bottom: 5px; */
 }
 
