--- a/css/dark.css
+++ b/css/dark.css
@@ -26,6 +26,10 @@ h1 {
     color:rgb(214, 213, 213);
 }
 
+input {
+    color: white;
+}
+
 table, td {
     background-color: rgb(44, 116, 116);
 }
@@ -57,6 +61,12 @@ th {
 .cards-label {
     background-color:rgb(30, 128, 79);
     border: 3px solid rgb(111, 173, 147);
+}
+
+.definition .process .process-label:hover {
+    cursor: pointer;
+    background-color: rgb(77, 184, 160);
+    transition: .5s ease all;
 }
 
 .formsci {
