--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,8 @@ ol, ul {
     display: block;
     /* margin: 10px; */
     /* padding: 10px; */
-    padding-left: 15px;
+    /* padding-bottom: 10px; */
+    padding-left: 5%;
     padding-right: 15px;
     text-align: left;
 }
@@ -203,6 +204,11 @@ th {
 
 ul {
     list-style: none;
+}
+
+ul li {
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
 .addendum {
@@ -371,6 +377,11 @@ ul {
     transition: .5s ease all;
 }
 
+.example .process-label {
+    /* color: blue; */
+    transform: translateX(-3px);
+}
+
 .formsci {
     /* background-color:rgb(186, 226, 252); */
     background-color:rgba(110, 221, 255, 0.678);
@@ -456,6 +467,7 @@ ul {
     margin-top: 0;
     margin-bottom:0;
     padding: 0;
+    /* padding-bottom: 10px; */
     max-width:91%;
     min-width: 200px;
     transition: .5s ease all;
@@ -484,11 +496,18 @@ ul {
 }
 
 .process .process-label {
-    margin:0;
+    padding: 6px;
+    padding-left:0;
+    padding-right:0;
+    margin-bottom: 10px;
 }
 
-.process p {
+.process p, .process ol, .process ul {
     margin:3px;
+    margin-bottom: 10px;
+    margin-top: 0;
+    padding-bottom:0;
+    padding-top: 0;
 }
 
 table {
@@ -794,9 +813,13 @@ table {
 
     .content {
         /* background-color: #111; */
-        width: 100%;
-        padding-top:0;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         margin-top:0;
+        padding-top:0;
+        width: 100%;
     }
 
     .content .bottom {
