--- a/css/styles.css
+++ b/css/styles.css
@@ -235,8 +235,6 @@ ul li {
 
 .card {
     align-items: center;
-    /* background-color:rgba(255, 255, 255, 0.781); */
-    /* background-color: none; */
     border: 1px solid rgb(151, 151, 151);
     border-radius: 10px;
     display: flex;
@@ -247,6 +245,7 @@ ul li {
     margin: 3px;
     min-height: fit-content;
     padding: 2px;
+    padding-bottom: 0;
     text-align: center;
     transition: .8s ease all;
     width: 85px;
@@ -439,7 +438,8 @@ ul li {
 }
 
 .natsci {
-    background-color: rgba(22, 165, 110, 0.5);
+    /* background-color: rgba(22, 165, 110, 0.5); */
+    background-color: rgb(137, 238, 216);
     margin-top: 40px;
 }
 
@@ -743,6 +743,8 @@ table {
         height: 85px;
         margin: 10px;
         padding: 5px;
+        padding-bottom: 0;
+        /* padding-top: 0; */
         min-width: 85px;
     }
 
@@ -830,10 +832,6 @@ table {
         width: 91%;
         margin-bottom:5px;
         /* gap: 10px; */
-    }
-
-    .natsci {
-        margin-top: 0;
     }
 
     .shoutout {
