--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,7 @@ ul li {
     margin:0;
     padding:0;
     /* background-color: #08c708; */
-    max-width:1000px;
+    /* max-width:1000px; */
     /* width: 300px; */
     overflow-x: auto;
     overflow-y: hidden;
