--- a/css/dark.css
+++ b/css/dark.css
@@ -112,7 +112,7 @@ th {
 }
 
 .process-label {
-    background-color: rgb(28, 172, 136);
+    background-color:rgba(0, 168, 168, 0.6);
     color:white;
 }
 
