--- a/css/styles.css
+++ b/css/styles.css
@@ -507,8 +507,13 @@ ul li {
     margin:3px;
     margin-bottom: 10px;
     margin-top: 0;
+    max-width: 100%;
     padding-bottom:0;
     padding-top: 0;
+}
+
+ol li {
+    max-width: 100%;
 }
 
 table {
