--- a/css/dark.css
+++ b/css/dark.css
@@ -50,7 +50,7 @@ th {
 
 .card {
     /* background-color:rgba(97, 159, 241, 0.8); */
-    background-color:rgba(78, 78, 78, 0.164);
+    /* background-color:rgba(78, 78, 78, 0.164); */
     border: 2px solid rgb(182, 182, 182);
     color: white;
 }
@@ -77,7 +77,7 @@ th {
 
 .formsci {
     background-color: rgb(32, 72, 184,.7);
-    background-color: rgba(12, 66, 148, 0.651);
+    background-color: rgba(41, 100, 188, 0.699);
 }
 
 .header {
