--- a/css/light.css
+++ b/css/light.css
@@ -22,12 +22,8 @@ h3:hover {
     background-color: black;
 }
 
-table, th, td {
-    border: 2px solid rgba(58, 54, 54, 0.5);
-}
-
 .card {
-    background-color:rgba(241, 237, 237, 0.253);
+    /* background-color:rgba(241, 237, 237, 0.253); */
     color: rgb(63, 63, 63);
 }
 
@@ -44,7 +40,7 @@ table, th, td {
 
 .natsci {
     /* background-color: rgba(50, 228, 118, 0.493); */
-    background-color: rgb(55, 235, 196);
+    background-color: rgba(55, 235, 196, 0.495);
 }
 
 .sidenav {
